test_suite/alan-2022-examples/failing/000970_mutation.alan
source K46 begin boolean R; . relax end
